Fixed semantics and layout error

--- a/Index.html
+++ b/Index.html
@@ -28,12 +28,13 @@
   <body>
     <!-- header -->
     <header>
-      <nav class="Flex-nav">
-        <!-- My logo -->
-        <p class="logo">My Logo</p>
-        <div class="menu">
-          <img src="/picture/Union.png" alt="" />
-        </div>
+      <p>
+        <a href="#" class="logo">My Logo</a>
+     </p>
+      <nav class="menu">
+        <img src="/picture/Union.png" alt="" />
+      </nav>
+  </header>
       </nav>
     </header>
     <!--end header -->
