Add work section first page

--- a/Index.html
+++ b/Index.html
@@ -37,7 +37,7 @@
     </header>
     <!--end header -->
     <main>
-      <section>
+      <section class="first-section">
         <div>
           <h1>I'm Kerlos Baha.<br />Glad to see <br />you!</h1>
           <p class="intro">
@@ -77,5 +77,28 @@
       </section>
       <span class="shape"> </span>
     </main>
+    <div class="space"></div>
+
+    <!-- second page -->
+
+    <section class="repeated-section">
+      <img class="repeated-img" src="/picture/Snapshoot Portfolio.png" alt="" />
+      <p class="repeated-p1">Tonic</p>
+      <ul class="repeated-ul">
+        <li class="repeated-li1">CANOPY</li>
+        <li class="repeated-li2">Back End Dev</li>
+        <li class="repeated-li3">2015</li>
+      </ul>
+      <p class="repeated-p2">
+        A daily selection of privately personalized reads; no accounts or
+        sign-ups required.
+      </p>
+      <ul class="repeated-ul2">
+        <li class="repeated-li4">HTML</li>
+        <li class="repeated-li5">CSS</li>
+        <li class="repeated-li6">JavaScript</li>
+      </ul>
+      <button class="see-button">See project</button>
+    </section>
   </body>
 </html>
