Add button interactions

--- a/Index.html
+++ b/Index.html
@@ -79,7 +79,7 @@
     </main>
     <div class="space"></div>
 
-    <!-- second page -->
+    <!-- first work page -->
 
     <section class="repeated-section">
       <img class="repeated-img" src="/picture/Snapshoot Portfolio.png" alt="" />
