--- a/Index.html
+++ b/Index.html
@@ -184,5 +184,63 @@
       <button class="see-button">See project</button>
     </section>
     <div class="space"></div>
+
+    <!-- about myself -->
+
+    <section class="about-myself">
+      <div class="div-flex">
+        <h1>About Myself</h1>
+        <p class="intro">
+          Hello I’m a software developer! I can help you build a product ,
+          feature or website. Look through some of my work and experience! If
+          you like what you see and have a project you need coded, don’t
+          hesitate to contact me.
+        </p>
+        <p class="Connect">LET'S CONNECT</p>
+        <ul class="social-1">
+          <li>
+            <a
+              class="linkedin"
+              href="https://www.linkedin.com/in/kerlos-bahaa-457a8925a/"
+            >
+              <i class="fa-brands fa-linkedin-in"></i>
+            </a>
+          </li>
+          <li>
+            <img src="/picture/Vector.png" alt="" />
+          </li>
+          <li>
+            <a class="github" href="https://github.com/kerlos-bahaa">
+              <i class="fa-brands fa-github"></i>
+            </a>
+          </li>
+          <li>
+            <img src="picture/Vector(1).png" alt="" />
+          </li>
+          <li>
+            <a class="twitter" href="https://twitter.com/KerlosBahaa"
+              ><i class="fa-brands fa-twitter"></i>
+            </a>
+          </li>
+        </ul>
+        <button class="resume">
+          Get my resume </button>
+      <div>
+        <ul class="end-part">
+          <li class="end-part-1">
+            Languages
+          </li>
+          <ul class="skil">
+            <li> <img src="/picture/Ellipse 1.png" alt=""> <p>JavaScript</p></li>
+            <li><img src="/picture/Ellipse 2.png" alt=""> <p>HTML</p></li>
+            <li><img src="/picture/Ellipse 1(1).png" alt=""> <p>CSS</p></li>
+          </ul>
+          <li class="end-part-2">Frameworks</li>
+          <hr>
+          <li class="end-part-3">Skills</li>
+          <hr>
+        </ul>
+      </div>
+    </section>
   </body>
 </html>
