--- a/Index.html
+++ b/Index.html
@@ -57,7 +57,7 @@
               </a>
             </li>
             <li>
-              <img src="./picture/Vector.png" alt="" />
+              <a href="#"><img src="./picture/Vector.png" alt="" /></a>
             </li>
             <li>
               <a class="github" href="https://github.com/kerlos-bahaa">
@@ -65,7 +65,7 @@
               </a>
             </li>
             <li>
-              <img src="./picture/Vector(1).png" alt="" />
+              <a href="#"><img src="./picture/Vector(1).png" alt="" /></a>
             </li>
             <li>
               <a class="twitter" href="https://twitter.com/KerlosBahaa"
