--- a/Index.html
+++ b/Index.html
@@ -259,7 +259,7 @@
 
     <footer>
       <section>
-        <form>
+        <form action="" method="post" target="_blank">
           <div>
             <h3>Contact me</h3>
             <p>
@@ -268,6 +268,25 @@
               love to help with it!
             </p>
           </div>
+          <input
+            name="username"
+            type="text"
+            placeholder="kerlos-david"
+            required
+          />
+          <input
+            name="email"
+            type="email"
+            placeholder="alexndra@mail.com"
+            required
+          />
+          <textarea
+            name="message"
+            maxlength="500"
+            placeholder="add message"
+            required
+          ></textarea>
+          <button name="submit" type="submit">Get in touch</button>
         </form>
       </section>
     </footer>
