--- a/Index.html
+++ b/Index.html
@@ -258,35 +258,37 @@
     </section>
 
     <footer>
-      <section>
+      <section class="footer-section">
         <form action="" method="post" target="_blank">
-          <div>
-            <h3>Contact me</h3>
+          <div class="contact-header">
+            <h3 class="title">Contact me</h3>
             <p>
               If you have an application you are interested in developing, a
               feature that you need built or a project that needs coding. I’d
               love to help with it!
             </p>
           </div>
-          <input
-            name="username"
-            type="text"
-            placeholder="kerlos-david"
-            required
-          />
-          <input
-            name="email"
-            type="email"
-            placeholder="alexndra@mail.com"
-            required
-          />
-          <textarea
-            name="message"
-            maxlength="500"
-            placeholder="add message"
-            required
-          ></textarea>
-          <button name="submit" type="submit">Get in touch</button>
+          <div class="contact-form">
+            <input
+              name="username"
+              type="text"
+              placeholder="kerlos-david"
+              required
+            />
+            <input
+              name="email"
+              type="email"
+              placeholder="alexndra@mail.com"
+              required
+            />
+            <textarea
+              name="message"
+              maxlength="500"
+              placeholder="add message"
+              required
+            ></textarea>
+            <button name="submit" type="submit">Get in touch</button>
+          </div>
         </form>
       </section>
     </footer>
