--- a/Index.html
+++ b/Index.html
@@ -257,6 +257,7 @@
       </div>
     </section>
 
+    <!-- contact me  -->
     <footer>
       <section class="footer-section">
         <form action="" method="post" target="_blank">
