--- a/Index.html
+++ b/Index.html
@@ -257,13 +257,12 @@
       </div>
     </section>
 
-    <!-- contact me  -->
     <footer>
       <section class="footer-section">
         <form action="" method="post" target="_blank">
           <div class="contact-header">
-            <h3 class="title">Contact me</h3>
-            <p>
+            <h3 class="title white-text">Contact me</h3>
+            <p class="white-text">
               If you have an application you are interested in developing, a
               feature that you need built or a project that needs coding. I’d
               love to help with it!
