Style_contact_header

--- a/Index.html
+++ b/Index.html
@@ -262,7 +262,7 @@
         <form action="" method="post" target="_blank">
           <div class="contact-header">
             <h3 class="title white-text">Contact me</h3>
-            <p class="white-text">
+            <p class="par white-text">
               If you have an application you are interested in developing, a
               feature that you need built or a project that needs coding. I’d
               love to help with it!
