--- a/Index.html
+++ b/Index.html
@@ -270,24 +270,27 @@
           </div>
           <div class="contact-form">
             <input
+            class="input-form"
               name="username"
               type="text"
               placeholder="kerlos-david"
               required
             />
             <input
+            class="input-form"
               name="email"
               type="email"
               placeholder="alexndra@mail.com"
               required
             />
             <textarea
+            class="input-form"
               name="message"
               maxlength="500"
               placeholder="add message"
               required
             ></textarea>
-            <button name="submit" type="submit">Get in touch</button>
+            <button class="form-submit" name="submit" type="submit">Get in touch</button>
           </div>
         </form>
       </section>
