--- a/Index.html
+++ b/Index.html
@@ -270,27 +270,29 @@
           </div>
           <div class="contact-form">
             <input
-            class="input-form"
+              class="input-form"
               name="username"
               type="text"
               placeholder="kerlos-david"
               required
             />
             <input
-            class="input-form"
+              class="input-form"
               name="email"
               type="email"
               placeholder="alexndra@mail.com"
               required
             />
             <textarea
-            class="input-form"
+              class="input-form"
               name="message"
               maxlength="500"
               placeholder="add message"
               required
             ></textarea>
-            <button class="form-submit" name="submit" type="submit">Get in touch</button>
+            <button class="form-submit" name="submit" type="submit">
+              Get in touch
+            </button>
           </div>
         </form>
       </section>
