Add action  to the forum

--- a/Index.html
+++ b/Index.html
@@ -259,7 +259,11 @@
 
     <footer>
       <section class="footer-section">
-        <form action="" method="post" target="_blank">
+        <form
+          action="https://formspree.io/f/xayzpwaq"
+          method="post"
+          target="_blank"
+        >
           <div class="contact-header">
             <h3 class="title white-text">Contact me</h3>
             <p class="par white-text">
