Fix usename limit

--- a/Index.html
+++ b/Index.html
@@ -279,6 +279,7 @@
               type="text"
               placeholder="kerlos-david"
               required
+              maxlength="30"
             />
             <input
               class="input-form"
