--- a/Index.html
+++ b/Index.html
@@ -36,9 +36,9 @@
         <nav class="menu">
           <img src="./picture/Union.png" alt="" />
           <div class="nav-links">
-            <a href="#">Portfolio</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
+            <a class="nav-transition" href="#">Portfolio</a>
+            <a class="nav-transition" href="#">About</a>
+            <a class="nav-transition" href="#">Contact</a>
   
           </div>
         </nav>
