Fix labels and headings

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               what you see and have a project you need coded, don’t hesitate to
               contact me.
             </p>
-            <h2 class="Connect">LET'S CONNECT</h2>
+            <h4 class="Connect">LET'S CONNECT</h4>
             <ul class="social">
               <li>
                 <a
@@ -97,7 +97,7 @@
     <img class="repeated-img" src="./picture/Snapshoot Portfolio.png" alt="Snapshoot Portfolio " />
     <img class="pcrepeated-img" src="./picture/tonixpc.png" alt="Snapshoot Portfolio">
     <div class="pc12-div">
-      <h2 class="repeated-p1">Tonic</h2>
+      <h3 class="repeated-p1">Tonic</h3>
       <ul class="repeated-ul">
         <li class="repeated-li1">CANOPY</li>
         <li class="repeated-li2">Back End Dev</li>
@@ -124,10 +124,10 @@
       alt="Snapshoot Portfolio2"
     />
 <div>
-  <h2 class="repeated-p1">
+  <h3 class="repeated-p1">
     Multi-Post Stories
     
-  </h2>
+  </h3>
   <ul class="repeated-ul">
     <li class="repeated-li1">CANOPY</li>
     <li class="repeated-li2">Back End Dev</li>
@@ -159,7 +159,7 @@
     />
     <img class="pcrepeated-img" src="./picture/pc3.png" alt="Snapshoot Portfolio3">
     <div class="pc12-div">
-      <h2 class="repeated-p1">Tonic</h2>
+      <h3 class="repeated-p1">Tonic</h3>
       <ul class="repeated-ul">
         <li class="repeated-li1">CANOPY</li>
         <li class="repeated-li2">Back End Dev</li>
@@ -187,10 +187,10 @@
       alt="Snapshoot Portfolio4"
     />
 <div>
-  <h2 class="repeated-p1">
+  <h3 class="repeated-p1">
     Multi-Post Stories
     
-  </h2>
+  </h3>
   <ul class="repeated-ul">
     <li class="repeated-li1">CANOPY</li>
     <li class="repeated-li2">Back End Dev</li>
@@ -284,7 +284,7 @@
         >
         <!-- contact me  -->
           <div class="contact-header">
-            <h3 class="title white-text">Contact me</h3>
+            <h2 class="title white-text">Contact me</h2>
             <p class="par white-text">
               If you have an application you are interested in developing, a
               feature that you need built or a project that needs coding. I’d
@@ -292,7 +292,8 @@
             </p>
           </div>
           <div class="contact-form">
-            <input
+            <label class="label-name"> Name</label>
+            <input 
               class="input-form"
               name="username"
               type="text"
@@ -300,6 +301,7 @@
               required
               maxlength="30"
             />
+            <label class="label-email"> Email</label>
             <input
               class="input-form"
               name="email"
@@ -307,6 +309,7 @@
               placeholder="alexndra@mail.com"
               required
             />
+            <label class="label-message"> Message</label>
             <textarea
               class="input-form"
               name="message"
