Fix contrast and structure of the page

--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
               what you see and have a project you need coded, don’t hesitate to
               contact me.
             </p>
-            <h4 class="Connect">LET'S CONNECT</h4>
+            <h2 class="Connect">LET'S CONNECT</h>
             <ul class="social">
               <li>
                 <a
+                  alt
                   class="linkedin"
                   href="https://www.linkedin.com/in/kerlos-bahaa-457a8925a/"
+                  aria-label="linkedin"
                 >
                   <i class="fa-brands fa-linkedin-in"></i>
                 </a>
@@ -69,7 +71,8 @@
                 <a href="#"><img src="./picture/Vector.png" alt="medium icon" /></a>
               </li>
               <li>
-                <a class="github" href="https://github.com/kerlos-bahaa">
+                <a aria-label="github"
+                class="github" href="https://github.com/kerlos-bahaa">
                   <i class="fa-brands fa-github"></i>
                 </a>
               </li>
@@ -77,7 +80,7 @@
                 <a href="#"><img src="./picture/Vector(1).png" alt="angellist icon" /></a>
               </li>
               <li>
-                <a class="twitter" href="https://twitter.com/KerlosBahaa"
+                <a aria-label="twitter" class="twitter" href="https://twitter.com/KerlosBahaa"
                   ><i class="fa-brands fa-twitter"></i>
                 </a>
               </li>
@@ -228,6 +231,7 @@
     <ul class="social-1">
       <li>
         <a
+        aria-label="linkedin"
           class="linkedin"
           href="https://www.linkedin.com/in/kerlos-bahaa-457a8925a/"
         >
@@ -239,7 +243,7 @@
         
       </li>
       <li>
-        <a class="github" href="https://github.com/kerlos-bahaa">
+        <a aria-label="github" class="github" href="https://github.com/kerlos-bahaa">
           <i class="fa-brands fa-github"></i>
         </a>
       </li>
@@ -249,7 +253,7 @@
         
       </li>
       <li>
-        <a class="twitter" href="https://twitter.com/KerlosBahaa"
+        <a  aria-label="twitter" class="twitter" href="https://twitter.com/KerlosBahaa"
           ><i class="fa-brands fa-twitter"></i>
         </a>
       </li>
@@ -264,8 +268,8 @@
             Languages&nbsp;
           </li>
           <ul class="skil">
-            <li> <img class="image-java" src="./picture/Ellipse 1.png" alt="JavaScript image> <p>JavaScript</p></li>
-            <li><img src="./picture/Ellipse 2.png" alt=" HTML image"> <p>HTML</p></li>
+            <li> <img class="image-java" src="./picture/Ellipse 1.png" alt="JavaScript image"> <p>JavaScript</p></li>
+            <li><img src="./picture/Ellipse 2.png " alt=" HTML image"> <p>HTML</p></li>
             <li><img src="./picture/Ellipse 1(1).png" alt="CSS image"> <p>CSS </p></li>
           </ul>
           <li class="end-part-2">Frameworks</li>
