--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               what you see and have a project you need coded, don’t hesitate to
               contact me.
             </p>
-            <h2 class="Connect">LET'S CONNECT</h>
+            <h2 class="Connect">LET'S CONNECT</h2>
             <ul class="social">
               <li>
                 <a
