Fix title and menuabar

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="this is my professional portfolio which contains my education and my experience and projects">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Portfolio Project</title>
-    <!-- Css fie  -->
+    <title>Kerlos's Portfolio</title>
+    <meta name="description" content="">
+    <!-- Css file  -->
     <link rel="stylesheet" href="Css/master.css" />
 
     <!-- Render all elements normally -->
@@ -34,7 +36,7 @@
           <a href="#" class="logo">My Logo</a>
         </p>
         <nav class="menu">
-          <img src="./picture/Union.png" alt="Menu-burger" />
+          <img src="./picture/Union.png" alt="Menubar" />
           <div class="nav-links">
             <a class="nav-transition" href="#">Portfolio</a>
             <a class="nav-transition" href="#">About</a>
