--- a/index.html
+++ b/index.html
@@ -341,6 +341,6 @@
       </section>
     </footer>
     <!-- desktop version  -->
-    <script src="java.js"></script>
+    <script src="java-1.js"></script>
   </body>
 </html>
