--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
     <footer>
       <section class="footer-section">
         <form
+        class="form"
           action="https://formspree.io/f/xayzpwaq"
           method="post"
           target="_blank"
@@ -200,6 +201,7 @@
             />
             <label class="label-email"> Email</label>
             <input
+            id="email"
               class="input-form"
               name="email"
               type="email"
@@ -214,7 +216,8 @@
               placeholder="add message"
               required
             ></textarea>
-            <button class="form-submit" name="submit" type="submit">
+            
+            <button id="but" class="form-submit" name="submit" type="submit">
               Get in touch
             </button>
           </div>
@@ -227,5 +230,3 @@
   </body>
 </html>
 <div class="lastpopputton"> </div>
-
-http://127.0.0.1:5501/
