add message error in validate contact

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
               placeholder="add message"
               required
             ></textarea>
-            
+            <div id="error"></div>
             <button id="but" class="form-submit" name="submit" type="submit">
               Get in touch
             </button>
